src/test/resources/syntactic/tests/error/TC_ERROR_START_NOT_CLOSE.ru
/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 6 | COLUMNA 0 | SE ESPERABA: Token: sKEY_CLOSE. SE ENCONTRO: EOF |
start{

